--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="text-muted">Built by Brian and Olivia at <a href="http://www.fullstackacademy.com/">Fullstack Academy</a></p>
+      <p class="text-muted">Instructions: Press 'random' to generate
+        a random board, else click on the board to toggle live and dead
+        cells. 'Step' moves the game once, while 'play' autoplays the game
+        until you press 'play' again to pause the game. Press clear to
+        produce an empty board.</p>
+       <p class="text-muted">Blue cells are alive. White cells are dead. A live cell with less than 2 cells around it will die of underpopulation. A live cell with more than 3 cells around it will die of overcrowding. A dead cell will stay dead unless surrounded by 3 living neighbors (out of 8), in which it'll be reborn.</p>
+        <p class="text-muted">Built by Brian and Olivia at <a href="http://www.fullstackacademy.com/">Fullstack Academy</a></p>
     </div>
   </footer>
 
